<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Twentyfortyeight</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="title_2048">2048</string>
    <string name="credit_2048">Based on 2048 by Gabrielle Cirulli by permission under the MIT License:</string>
    <string name="credit_ClearSans">ClearSans was designed by Daniel Ratighan at Monotype under the direction of the User Experience team at Intel\'s Open Source Technology Center, and used with permission according to the Apache License, Version 2.0:</string>
    <string name="clearsans">ClearSans</string>
    <string name="about">About</string>
    <string name="controls">Controls</string>
    <string name="vertical_axis">Vertical Axis</string>
    <string name="horizontal_axis">Horizontal Axis</string>
    <string-array name="settings_array">
        <item>@string/controls</item>
        <item>@string/about</item>
    </string-array>
    <string name="SELECTION">dk.compsci.kja.tewntyfortyeight.SELECTION</string>
    <string name="apache_msg">The full text of the
 Apache License, Version 2.0, can be found at</string>
    <string name="MIT_msg">The full text of the MIT License can be found at </string>
    <string name="swipe">Swipe</string>
    <string name="volume_control">Volume control</string>
    <string name="screen_rotation">Screen Rotation</string>
    <string name="HORIZONTAL">Horizontal</string>
    <string name="VERTICAL">Vertical</string>
    <string name="submit_score">Submit Score</string>
    <string name="try_again">Try Again</string>
</resources>
