<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<LinearLayout
	    android:id="@id/main_screen" 
	    android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical">

		<View android:layout_width="match_parent" android:layout_height="0dp"
			android:layout_weight="0.40" />

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="0dp" android:layout_weight="1">



			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />

			<dk.compsci.kja.twentyfortyeight.view.Title
				android:layout_width="0dp" android:layout_height="fill_parent"
				android:layout_weight="1" />

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.5" />

			<dk.compsci.kja.twentyfortyeight.view.ScoreView
				android:id="@id/score_view" android:layout_width="0dp"
				android:layout_height="match_parent" android:layout_weight="1" />

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />

		</LinearLayout>


		<View android:layout_width="match_parent" android:layout_height="0dp"
			android:layout_weight="0.49" />

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="0dp" android:layout_weight="1"
			android:orientation="horizontal">

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />

			<dk.compsci.kja.twentyfortyeight.view.MainButton
				android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="1" android:text="@string/highscores" />

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />

			<dk.compsci.kja.twentyfortyeight.view.MainButton
				android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="1" android:text="@string/settings"
				android:onClick="clickSettings" />

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />

			<dk.compsci.kja.twentyfortyeight.view.MainButton
				android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="1" android:onClick="clickReset" android:text="@string/new_game" />

			<View android:layout_width="0dp" android:layout_height="match_parent"
				android:layout_weight="0.1" />
		</LinearLayout>

		<View android:layout_width="match_parent" android:layout_height="0dp"
			android:layout_weight="0.26" />

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="0dp" android:layout_weight="5.96"
			android:gravity="center" android:orientation="horizontal">

			<dk.compsci.kja.twentyfortyeight.view.TwentyfortyeightGrid
				android:id="@id/grid" android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>

		<View android:layout_width="match_parent" android:layout_height="0dp"
			android:layout_weight="0.26" />

	</LinearLayout>
	
	<LinearLayout
	    android:id="@id/game_over_screen"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:orientation="vertical" >

	    <dk.compsci.kja.twentyfortyeight.view.MainButton
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:onClick="clickReset"
	        android:text="Try Again" />

		<dk.compsci.kja.twentyfortyeight.view.MainButton
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:onClick="clickSubmitScore"
		    android:text="Submit Score" />
	        				
	</LinearLayout>
	
</FrameLayout>